Fixed icon alignment, and changed the map pin emoji to a location dot, so that I may have more control over its design.

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ body::-webkit-scrollbar {
 }
 
 img.icon {
-  vertical-align: middle;
+  vertical-align: bottom;
 }
 
 .bottom-links-container {
